<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="about">About</string>
    <string name="action_favourite">Add to favourites</string>
    <string name="action_favourites">Favourites</string>
    <string name="action_history">History</string>
    <string name="action_reading_options">Reading options</string>
    <string name="action_search">Search</string>
    <string name="adjust_brightness">Adjust brightness</string>
    <string name="settings">Settings</string>
    <string name="action_sort">Sort order</string>
    <string name="add_to_homescreen">Add to home screen</string>
    <string name="appearance">Appearance</string>
    <string name="apply">Apply</string>
    <string name="auth_failed">Authorization failed</string>
    <string name="author_">Author:</string>
    <string name="authorization">Authorization</string>
    <string name="authorization_success">Authorization success</string>
    <string name="backup">Create backup</string>
    <string name="backup_done">Backup completed</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_not_found">Bookmark not found</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmarks_summary">Favourite pages</string>
    <string name="brightness_value">Brightness value</string>
    <string name="bug_report_message">Sending a bug report will help the developers. Debug log may contain addresses of some viewed pages.</string>
    <string name="bug_report">Send a bug report</string>
    <string name="cache_clearing">Clearing cache…</string>
    <string name="cache_size">Cache size</string>
    <string name="cancelling">Cancelling…</string>
    <string name="cannot_create_file">Cannot create file</string>
    <string name="category_remove_confirm">Are you sure want to remove category \"%1$s\"? This action cannot be undone.</string>
    <string name="category_x_removed">Category \"%1$s\" was removed</string>
    <string name="chapters">Chapters</string>
    <string name="chapters_count_">Chapters:</string>
    <string name="chapters_list">Chapters list</string>
    <string name="chapters_marked_as_viewed">All chapters marked as viewed</string>
    <string name="checking_frequency">Frequency of checking</string>
    <string name="checking_new_chapters">Checking for new chapters</string>
    <string name="checking_new_chapters_summary">Checking for new chapters</string>
    <string name="check_new_chapters">Check for new chapters</string>
    <string name="clear">Clear</string>
    <string name="clear_history">Clear history</string>
    <string name="close">Close</string>
    <string name="configure_sources">Configure sources</string>
    <string name="_continue">Continue</string>
    <string name="create_bookmark">Create bookmark</string>
    <string name="create">Create</string>
    <string name="create_new_category">Create new category</string>
    <string name="custom_path">Custom path</string>
    <string name="description">Description</string>
    <string name="direction_ltr">Left to right</string>
    <string name="direction_rtl">Right to left</string>
    <string name="discover">Discover</string>
    <string name="done">Done</string>
    <string name="downloading_image">Loading image…</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="error">An error has occurred</string>
    <string name="error_bad_response">Invalid response from server</string>
    <string name="error_occurred">An error has occurred</string>
    <string name="error_timeout">Timed out while connecting</string>
    <string name="export_file">Export</string>
    <string name="failed_to_create_bookmark">Failed to create bookmark</string>
    <string name="failed_to_load_chapters">Failed to load list of chapters</string>
    <string name="failed_to_load_pages">Failed to load pages list</string>
    <string name="favourites_categories">Favourites categories</string>
    <string name="favourites_category_must_be">You must have at least one favourites category</string>
    <string name="filter">Filter</string>
    <string name="filter_reset">Filter was reset</string>
    <string name="history_clear_confirm">Do you want to clear history? This action cannot be undone.</string>
    <string name="history_cleared">History cleared</string>
    <string name="history_empty">History is empty</string>
    <string name="image_decode_error">Decoding error</string>
    <string name="image_loading_error">Loading error</string>
    <string name="image_saved">Image saved successfully</string>
    <string name="import_file">Import</string>
    <string name="interval_1hour">Each hour</string>
    <string name="interval_2hours">Every 2 hours</string>
    <string name="interval_3hours">Every 3 hours</string>
    <string name="interval_6hours">Every 6 hours</string>
    <string name="interval_12hours">Every 12 hours</string>
    <string name="interval_once_day">Daily</string>
    <string name="interval_two_days">Every 2 days</string>
    <string name="keep_screen">Keep screen on</string>
    <string name="last_update_check" formatted="false" tools:ignore="StringFormatInvalid">Last check: %s</string>
    <string name="loading_chapter">Loading chapter…</string>
    <string name="loading_error">Loading failed</string>
    <string name="loading">Loading…</string>
    <string name="load_thumbnails">Load thumbnails</string>
    <string name="login">Login</string>
    <string name="log_not_found">Error log not found!</string>
    <string name="manage_categories">Manage categories</string>
    <string name="manga_catalogues">Mangas catalogues</string>
    <string name="manga_updates">Updated manga</string>
    <string name="mark_all_viewed_confirm">Mark all updated mangas as viewed?</string>
    <string name="mark_all_viewed">Mark all as viewed</string>
    <string name="more">More</string>
    <string name="need_restart">Restart application to apply changes</string>
    <string name="network_error">Network error</string>
    <string name="new_chapters_available">New chapters are available</string>
    <string name="next_chapter_" formatted="false" tools:ignore="StringFormatInvalid">Next chapter\n\n%s</string>
    <string name="next_chapter">Next chapter</string>
    <string name="no_backups">No backups found</string>
    <string name="no_bookmarks_tip">No bookmarks</string>
    <string name="no_chapters_found">No chapters found</string>
    <string name="no_manga_found">No manga found</string>
    <string name="no_new_chapters">No new chapters</string>
    <string name="no_pages_found">No pages found</string>
    <string name="no_saved_manga">No saved manga on your device</string>
    <string name="no_thanks">No thanks</string>
    <string name="nothing_here_yet">There is nothing here yet</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="on_any_network">On any network</string>
    <string name="only_when_wifi">Only when on WiFi</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="open_in_">Open in…</string>
    <string name="page_x_of_n">Page %1$d of %2$d</string>
    <string name="password">Password</string>
    <string name="pick_dir">Pick directory</string>
    <string name="postpone">Postpone</string>
    <string name="preparing">Preparing…</string>
    <string name="prev_chapter" formatted="false" tools:ignore="StringFormatInvalid">Previous chapter\n\n%s</string>
    <string name="reader_mode">Reader mode</string>
    <string name="read">Read</string>
    <string name="recommendations">Recommendations</string>
    <string name="recommendations_summary">Random manga based on your preferences</string>
    <string name="refresh">Refresh</string>
    <string name="remove_bookmark">Remove bookmark</string>
    <string name="removed_from_history">Manga \"%1$s\" removed from history</string>
    <string name="remove">Remove</string>
    <string name="rename">Rename</string>
    <string name="requested_chapter_not_found">Requested chapter not found</string>
    <string name="reset">Reset</string>
    <string name="restart">Restart</string>
    <string name="restore_done">Data was successfully restored</string>
    <string name="restore">Restore backup</string>
    <string name="retry">Retry</string>
    <string name="reverse_order">Reverse chapters</string>
    <string name="save_all_chapters">Save all chapters</string>
    <string name="saved_manga">Saved manga</string>
    <string name="saved_manga_summary">Downloaded chapters (available without network)</string>
    <string name="save_image">Save image</string>
    <string name="save_next_10_chapters">Save this and next 10 chapters</string>
    <string name="save_next_30_chapters">Save this and next 30 chapters</string>
    <string name="save_next_5_chapters">Save this and next 5 chapters</string>
    <string name="save_next_all_chapters">Save this and all next chapters</string>
    <string name="save_prev_chapters">Save this and previous chapters</string>
    <string name="save_">Save…</string>
    <string name="save_this_chapter">Save this chapter</string>
    <string name="saving_manga">Saving manga</string>
    <string name="scroll_by_volkeys">Scroll with volume keys</string>
    <string name="search_hint">Search manga</string>
    <string name="select_backup">Select backup</string>
    <string name="select_file">Select file</string>
    <string name="select_image">Select image</string>
    <string name="select_storage">Select storage</string>
    <string name="send">Send</string>
    <string name="share_image">Share image</string>
    <string name="share">Share</string>
    <string name="shelf_is_empty">Your shelf is empty</string>
    <string name="shelf_settings">Shelf settings</string>
    <string name="sign_in">Sign in</string>
    <string name="size_free" formatted="false" tools:ignore="StringFormatInvalid">%s free</string>
    <string name="sort_alphabetical">Alphabetical</string>
    <string name="sort_latest">Latest</string>
    <string name="sort_popular">Popular</string>
    <string name="sort_rating">By rating</string>
    <string name="sort_updated">Updated</string>
    <string name="source_">Source:</string>
    <string name="status_completed">COMPLETED</string>
    <string name="status_ongoing">ONGOING</string>
    <string name="storage_remote">Remote storage</string>
    <string name="theme">Theme</string>
    <string name="undo">Undo</string>
    <string name="unfavourited">Removed from favourites</string>
    <string name="shelf">Shelf</string>
    <string name="tools">Tools</string>
    <string name="network_connection_type">Network connection type</string>
    <string name="scheduled_checking">Scheduled checking</string>
    <string name="action_settings">Settings</string>
    <string name="about_google_play">Rate on Google Play</string>
    <string name="feel_free_to_contact_me">Feel free to contact me.</string>
    <string name="about_github">Source code</string>
    <string name="manga_local_dir">Local manga\'s directory</string>
    <string name="calculating">Calculating…</string>
    <string name="average_time">Estimated reading time</string>
    <string name="about_telegram">Profile in Telegram</string>
    <string name="about_4pda">Thread on 4PDA</string>
    <string name="downloads">Downloads</string>
    <string name="updates">Updates</string>
    <string name="view_mode">View mode</string>
    <string name="view_mode_list">List</string>
    <string name="view_mode_grid_small">Small grid</string>
    <string name="view_mode_grid_medium">Medium grid</string>
    <string name="view_mode_grid_large">Large grid</string>
</resources>