<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:scrollbars="vertical"
	android:background="?colorCard"
	android:tag="@string/description"
	app:layout_behavior="@string/appbar_scrolling_view_behavior">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<View
			android:id="@+id/guideline"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginTop="16dp"
			app:layout_constraintTop_toBottomOf="@+id/cover_card"
			tools:ignore="MissingConstraints" />

		<androidx.constraintlayout.widget.Guideline
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/guideline2"
			android:orientation="vertical"
			app:layout_constraintGuide_percent="0.38"/>

		<ImageView
			android:id="@+id/backdrop"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:alpha="0.25"
			android:adjustViewBounds="true"
			android:scaleType="centerCrop"
			tools:background="@tools:sample/backgrounds/scenic"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toTopOf="@+id/guideline"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			tools:ignore="ContentDescription" />

		<View
			android:layout_width="match_parent"
			android:layout_height="88dp"
			android:background="@drawable/manga_info_gradient"
			app:layout_constraintBottom_toBottomOf="@id/backdrop" />

		<androidx.cardview.widget.CardView
			android:id="@+id/cover_card"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:cardCornerRadius="2dp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="16dp"
			android:layout_marginBottom="16dp"
			app:layout_constraintDimensionRatio="h,2:3"
			app:layout_constraintEnd_toStartOf="@id/guideline2"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<ImageView
				android:id="@+id/imageView_cover"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:scaleType="centerCrop"
				tools:background="@tools:sample/backgrounds/scenic"
				tools:ignore="ContentDescription" />

		</androidx.cardview.widget.CardView>

		<Button
			android:id="@+id/button_read"
			style="@style/Widget.AppCompat.Button.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="8dp"
			android:textColor="@android:color/white"
			android:text="@string/read"
			android:enabled="false"
			app:layout_constraintBottom_toBottomOf="@+id/backdrop"
			app:layout_constraintEnd_toEndOf="parent" />

		<androidx.appcompat.widget.AppCompatImageButton
			android:id="@+id/button_favourite"
			style="@style/Widget.AppCompat.ImageButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignTop="@id/button_read"
			android:layout_alignBottom="@id/button_read"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="8dp"
			android:background="?selectableItemBackgroundBorderless"
			android:contentDescription="@string/action_favourite"
			android:padding="12dp"
			android:src="@drawable/ic_tag_heart_outline_white_24dp"
			app:layout_constraintBottom_toBottomOf="@+id/backdrop"
			app:layout_constraintEnd_toStartOf="@+id/button_read"
			app:tint="?android:attr/textColorSecondary"
			app:tintMode="src_in"
			tools:src="@drawable/ic_tag_heart_black" />

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="16dp"
			android:layout_marginStart="0dp"
			android:layout_marginEnd="16dp"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toTopOf="@+id/guideline"
			app:layout_constraintStart_toStartOf="@+id/guideline2"
			app:layout_constraintEnd_toEndOf="parent">

			<TextView
				android:id="@+id/textView_summary"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				tools:text="Chapters: 5\nSource: MangaFox\nOngoing"
				android:textAppearance="@style/TextAppearance.AppCompat.Body1"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"/>

			<RatingBar
				android:id="@+id/ratingBar"
				style="@style/Widget.AppCompat.RatingBar.Small"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/textView_summary"
				android:isIndicator="true"
				android:numStars="5"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textView_summary"
				tools:rating="3.7" />

		</androidx.constraintlayout.widget.ConstraintLayout>



		<com.lucasurbas.listitemview.ListItemView
			android:id="@+id/genres"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@+id/guideline"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:liv_displayMode="icon"
			app:liv_multiline="true"
			app:liv_icon="@drawable/ic_shape_black_24dp"
			app:liv_title="@string/genres" />

		<com.lucasurbas.listitemview.ListItemView
			android:id="@+id/average_read_time"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/genres"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:liv_displayMode="icon"
			app:liv_multiline="true"
			app:liv_icon="@drawable/ic_fast_clock"
			app:liv_title="@string/average_time"
			app:liv_subtitle="@string/calculating"/>

		<com.lucasurbas.listitemview.ListItemView
			android:id="@+id/description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constrainedHeight="true"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/average_read_time"
			app:layout_constraintVertical_bias="0.0"
			app:layout_constraintVertical_chainStyle="packed"
			app:liv_displayMode="icon"
			app:liv_icon="@drawable/ic_info_24dp"
			app:liv_multiline="true"
			app:liv_title="@string/description"
			app:liv_subtitle="@string/loading"/>

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>